--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BharatXPLORE</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- <img src="assets/india.svg" alt="INDIA-MAP" /> -->
-    <object
-      type="image/svg+xml"
-      data="assets/india.svg"
-      width="1000"
-      height="1000"
-    >
-      INDIA-MAP
-    </object>
+    <div class="map-container">
+      <object
+        id="india-map"
+        type="image/svg+xml"
+        data="assets/india.svg"
+        width="1000"
+        height="1000"
+      >
+        INDIA-MAP
+      </object>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
+
+<!-- 
+  
+""
+hg
+''
+-->
