complete mouse hover function on states

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
             <br />
             <br />
             <p>
-              here's a picture of 2 cute smiling puppies
+              here's a picture of 2 cute smiling puppies.
               <br />
               <br />
               <img
