--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </nav>
 
-    <!-- ////////////////////////////////////////// NAVBAR ////////////////////////////////////////////// -->
+    <!-- ////////////////////////////////////////// INDIA-MAP  ////////////////////////////////////////////// -->
 
     <div class="map-container">
       <object
@@ -47,9 +47,13 @@
       </object>
     </div>
 
+    <div class="popup" id="popup">state-name</div>
+
     <script src="script.js"></script>
   </body>
 </html>
+
+<!-- //////////////////////////////////////////// ENDS  ///////////////////////////////////////////////// -->
 
 <!-- 
 
